<resources>
    <string name="app_name">Project</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="accounts">Accounts</string>
    <string name="transfers">Transfers</string>
    <string name="payments">Payments</string>
    <string name="menu">Menu</string>
    <string name="get_loan">Get loan</string>
    <string name="loans">Loans</string>
    <string name="get_payments">Get Payments</string>
    <string name="get_transfer">Get Transfer</string>
    <string name="get_qr">Get QR</string>
    <string name="qr">QR</string>
    <string name="bonus">Bonus</string>
    <string name="my_bank">My Bank</string>
    <string name="card_image">Card Image</string>
    <string name="dikin_gold">Dikin Gold</string>
    <string name="b">B</string>
    <string name="tenge_sign">Tenge Sign</string>
    <string name="bonus_sign">Bonus Sign</string>
    <string name="get_history">Get History</string>
    <string name="frequent">Frequent</string>
    <string name="favourites">Favourites</string>
    <string name="phone_number">Phone number</string>
    <string name="search_hint">Search here</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="card_number">* card number</string>
    <string name="_0">0</string>
    <string name="bonus_icon">Bonus icon</string>
    <string name="transfer_name">Transfer name</string>
    <string name="button_name">Button name</string>
    <string name="to_dikin_client">To Dikin Client</string>
    <string name="recipient_s_phone_number">Recipient\'s phone number</string>
    <string name="transfer">Transfer</string>
    <string name="add_to_frequent">Add to frequent</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="new_phone_number">New phone number</string>
    <string name="enter_an_old_password">Enter an old password</string>
    <string name="enter">Enter</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_image">User image</string>
    <string name="settings_icon">Settings icon</string>
    <string name="frequent_transfer_icon">Frequent transfer icon</string>
    <string name="button_icon">Button icon</string>
    <string name="favourite_payment_icon">Favourite payment icon</string>
    <string name="payment_name">Payment name</string>
    <string name="payment_icon">Payment icon</string>
    <string name="payment">Payment</string>
    <string name="all_payments">All payments</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="pay">Pay</string>
    <string name="client_dikin_gold">Client Dikin Gold</string>
    <string name="my_dikin_gold">My Dikin Gold</string>
    <string name="spend_bonuses">Spend bonuses</string>
    <string name="will_be_spent">Will be spent</string>
    <string name="history_item">History item</string>
    <string name="history_amount">History amount</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_new_name">Enter a new name</string>
</resources>