<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.HomeFragment">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@color/gray"
        android:queryBackground="@color/gray"
        android:queryHint="Type here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/actionsLayout"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp">

            <ImageButton
                android:id="@+id/imgLoan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="@string/get_loan"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_credit_card"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/loans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/loans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView1"
            app:layout_constraintStart_toStartOf="@+id/cardView1"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView3"
            app:layout_constraintStart_toEndOf="@id/cardView1"
            app:layout_constraintTop_toTopOf="@id/actionsLayout"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp">

            <ImageButton
                android:id="@+id/imgTransfer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="@string/get_transfer"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_transfer"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/transfers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/transfers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView4"
            app:layout_constraintStart_toEndOf="@id/cardView2"
            app:layout_constraintTop_toTopOf="@id/actionsLayout"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp">

            <ImageButton
                android:id="@+id/imgQR"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="@string/get_qr"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_qr"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/qr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/actionsLayout"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp">

            <ImageButton
                android:id="@+id/imgPayments"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="@string/get_payments"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_payment"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/payments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView4"
            app:layout_constraintStart_toStartOf="@+id/cardView4"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bonusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionsLayout">

        <ImageView
            android:id="@+id/imgBonusIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/bonus_icon"
            android:src="@drawable/ic_bonus_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/bonus"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBonusIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/bonus_sign"
            android:src="@drawable/ic_bonus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBonusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/_0"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBonus"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myBankLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonusLayout">

        <TextView
            android:id="@+id/txtMyBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/my_bank"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtMyBank"
            app:layout_constraintStart_toStartOf="@+id/txtMyBank"
            app:layout_constraintTop_toBottomOf="@id/txtMyBank">

            <ImageView
                android:id="@+id/imgView2"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="13dp"
                android:contentDescription="@string/card_image"
                android:scaleType="centerInside"
                android:src="@drawable/ic_mastercard" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/dikin_gold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCardCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/card_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtCardName"
            app:layout_constraintTop_toBottomOf="@+id/txtCardName" />

        <ImageView
            android:id="@+id/imgTenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/tenge_sign"
            android:src="@drawable/ic_tenge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCardValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/_0"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgTenge"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>